client/css/crypto.css
dialog[open] {
  background: var(--darkblue);
  border: none;
  border-radius: var(--border-radius-l);
  display: flex;
  filter: drop-shadow(var(--shadow-l) var(--darkblue));
  flex-flow: column nowrap;
  gap: 1.25rem;
  max-width: 768px;
  padding: 1.5rem;
  width: 100%;
}

dialog::backdrop {
  backdrop-filter: blur(3px);
}

textarea {
  background: var(--darkblue);
  border: 1px solid var(--lightblue);
  border-radius: var(--border-radius-m);
  color: var(--white);
  min-height: 300px;
  padding: 0.75rem;
}

button {
  background: var(--lightblue);
  border: 1px solid var(--lightblue);
  border-radius: var(--border-radius-m);
  color: var(--darkblue);
  cursor: pointer;
  min-height: 2.75rem;
}

button:not(.square) {
  min-width: 150px;
}

button svg {
  pointer-events: none;
}

button:focus-visible,
input:focus-visible,
textarea:focus-visible {
  outline: 1px solid var(--lightblue);
  outline-offset: 2px;
}

input {
  border: 1px solid var(--white);
  border-radius: var(--border-radius-m);
  color: var(--darkblue);
  padding: 0 0.5rem;
  height: 2.75rem;
}

@media (max-width: 767px) {
  dialog {
    margin: auto 0 0 0;
    max-width: calc(100% - 50px);
  }

  textarea {
    height: 60vh;
  }
}

section {
  display: grid;
  gap: 3rem;
}

.top-nav {
  display: flex;
  flex-flow: row wrap;
  gap: 2rem;
  justify-content: flex-start;
}

aside {
  background: var(--darkblue);
  border-radius: var(--border-radius-l);
  display: grid;
  filter: drop-shadow(var(--shadow-m) var(--darkblue));
  gap: 1.5rem;
  grid-template-columns: 48px auto;
  padding: 1.25rem 1.25rem 1.5rem;
  position: fixed;
  right: -352px;
  top: 106px;
  transition: translate 0.2s ease-in-out;
  z-index: 100;
}

aside.active {
  translate: calc(-352px - 1.5rem);
}

aside form {
  display: grid;
  gap: 1rem;
  grid-column: 1 / 3;
  width: 312px;
}

button.square {
  height: 48px;
  min-width: 0;
  width: 48px;
}

button.toggle {
  filter: drop-shadow(var(--shadow-s) var(--darkblue));
  font-size: var(--h2);
  grid-column: 1 / 2;
  position: relative;
  translate: -88px 0;
  transition: translate 0.2s ease-in-out;
}

.active button.toggle {
  rotate: 180deg;
}

.active button.toggle {
  translate: 0 0;
  transition: translate 0.2s ease-in-out;
}

aside fieldset {
  display: grid;
  gap: 0.25rem;
}

.backdrop {
  backdrop-filter: blur(3px);
  left: 0;
  position: fixed;
  top: 0;
  width: 100%;
  height: 100%;
}

form fieldset:last-of-type {
  margin-bottom: 1.5rem;
}

.links {
  display: grid;
  gap: 1.75rem;

  li {
    display: grid;
    grid-template-columns: 36px auto;
    grid-template-rows: repeat(2, auto);
    gap: 0.25rem 1rem;
  }

  a,
  span {
    color: var(--white);
    overflow-wrap: anywhere;
  }
}

button.delete-btn {
  align-items: center;
  display: flex;
  grid-column: 1 / 2;
  grid-row: 1 / 3;
  font-size: var(--h4);
  min-height: 34px;
  min-width: 0;
}

@media (max-width: 490px) {
  .top-nav {
    gap: 1.5rem;
    justify-content: space-between;

    button {
      flex: 0 0 100%;
    }
  }

  aside {
    bottom: -240px;
    top: auto;
  }

  aside.active {
    border-radius: var(--border-radius-l) var(--border-radius-l) 0 0;
    bottom: 0;
    left: 0;
    padding: 1.75rem 1.25rem 3.5rem;
    right: auto;
    top: auto;
    translate: none;
    width: 100%;
  }

  aside.active form {
    width: 100%;
  }

  dialog[open] {
    padding: 1.5rem 1.25rem;
  }
}

